objects/VisitOps__Program_Location_Link__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Program Location Links</relationshipLabel>
        <relationshipName>Program_Location_Links</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__ProgramLocationOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Location Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Location_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>VisitOps__Program__c</referenceTo>
        <relationshipLabel>Program Location Links</relationshipLabel>
        <relationshipName>Program_Location_Links</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Program Location Link</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Program__c</columns>
        <columns>VisitOps__Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLL-{0000}</displayFormat>
        <label>Program Location Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Location Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>